KPME-2218 - fixed problems found with FindBugs plugin
git-svn-id: https://svn.kuali.org/repos/kpme/trunk@4308 6c5f4195-72ea-6250-e7e4-e498f552a5df